Refactor code structure for improved readability and maintainability

--- a/web/index.html
+++ b/web/index.html
@@ -54,7 +54,7 @@
                         articlesHtml += `
 <article aria-label="News article" data-article-id="${articleId}">
     <header>
-        <h2><a href="${articleUrl}" target="_blank" rel="noopener noreferrer">${articleTitle}</a></h2>
+        <h2><a href="/article/${articleId}" target="_self">${articleTitle}</a></h2>
     </header>
     <section class="summary">
         <p>${articleContent}</p>
